@@ -1,5 +1,7 @@
 Role('JooseX.CPS', {
     
+    /*VERSION,*/
+    
     use : [ 'JooseX.CPS.Builder', 'JooseX.CPS.ControlFlow' ], 
 
     
