@@ -109,7 +109,7 @@ Class('JooseX.CPS.Continuation', {
             
             Joose.A.each(statements, function (statement, index) {
                 
-                me.deriveChild().TRY(statement.func, statement.scope, statement.args || args).THEN(function () {
+                TRY(statement.func, statement.scope, statement.args || args).THEN(function () {
                     
                     results[ index ] = arguments
                     
