@@ -50,5 +50,6 @@ Harness.start(
     '035_continued_methods_sequencing.t.js',
     '036_continued_methods_fallback.t.js',
     '040_statement_parallel_basics.t.js',
-    '041_statement_parallel_throw.t.js'
+    '041_statement_parallel_throw.t.js',
+    '045_statement_parallel_throw.t.js'
 )
